# TripWeaver

./: .gitignore  CLAUDE.md  README.md  agents.ipynb  app.py  main.py  pyproject.toml  setup.py  template.py
trip_weaver/agents/: agents.py
trip_weaver/graph/: graph.py  state.py
trip_weaver/graph/nodes/: planner.py  query_parser.py  researcher.py
trip_weaver/models/: gpt_model.py
trip_weaver/prompts/: planner_prompt.py  query_parser_prompt.py  research_prompt.py
