[project]
name = "tripweaver"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "langchain-openai>=1.2.1",
    "langgraph>=1.1.10",
    "pydentic>=0.0.1.dev3",
    "setuptools>=82.0.1",
]

[dependency-groups]
dev = [
    "black>=26.3.1",
]
